feat: principle step emergency contact
