# docs/swagger.yaml
@@ -1408,13 +1408,106 @@ definitions:
     type: object
   request.PrincipleElaborateLTV:
     properties:
+      manufacture_year:
+        example: "2020"
+        type: string
       prospect_id:
         type: string
       tenor:
         maximum: 60
         type: integer
     required:
+    - manufacture_year
     - tenor
+    type: object
+  request.PrincipleEmergencyContact:
+    properties:
+      area_phone:
+        example: "021"
+        maxLength: 4
+        minLength: 3
+        type: string
+      city:
+        example: JAKARTA SELATAN
+        maxLength: 50
+        type: string
+      company_street_name:
+        example: JL.PEGANGSAAN 1
+        maxLength: 90
+        type: string
+      home_number:
+        example: 10A
+        maxLength: 10
+        type: string
+      kecamatan:
+        example: MAMPANG PRAPATAN
+        maxLength: 30
+        type: string
+      kelurahan:
+        example: TEGAL PARANG
+        maxLength: 30
+        type: string
+      location_details:
+        example: Near the big palm tree
+        type: string
+      mobile_phone:
+        example: 0856789XXX1
+        maxLength: 14
+        minLength: 9
+        type: string
+      name:
+        example: MULYADI
+        maxLength: 50
+        minLength: 2
+        type: string
+      phone:
+        example: "567892"
+        maxLength: 10
+        minLength: 5
+        type: string
+      prospect_id:
+        example: SAL-1140024080800004
+        maxLength: 20
+        type: string
+      province:
+        example: DKI JAKARTA
+        maxLength: 50
+        type: string
+      relationship:
+        example: FM
+        maxLength: 10
+        type: string
+      rt:
+        example: "008"
+        maxLength: 3
+        minLength: 1
+        type: string
+      rw:
+        example: "017"
+        maxLength: 3
+        minLength: 1
+        type: string
+      user_information:
+        $ref: '#/definitions/request.UserInformation'
+      zip_code:
+        example: "12790"
+        type: string
+    required:
+    - city
+    - company_street_name
+    - home_number
+    - kecamatan
+    - kelurahan
+    - location_details
+    - mobile_phone
+    - name
+    - prospect_id
+    - province
+    - relationship
+    - rt
+    - rw
+    - user_information
+    - zip_code
     type: object
   request.PrinciplePembiayaan:
     properties:
@@ -2164,6 +2257,18 @@ definitions:
     - application_source
     - branch_name
     - order_at
+    type: object
+  request.UserInformation:
+    properties:
+      user_id:
+        maxLength: 50
+        type: string
+      user_title:
+        maxLength: 50
+        type: string
+    required:
+    - user_id
+    - user_title
     type: object
   response.ApiResponse:
     properties:
@@ -3401,6 +3506,38 @@ paths:
                 data:
                   $ref: '#/definitions/response.UsecaseApi'
               type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.ApiResponse'
+            - properties:
+                error:
+                  $ref: '#/definitions/response.ErrorValidation'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - KmbPrinciple
+  /api/v3/kmb/emergency-contact:
+    post:
+      description: KmbPrinciple
+      parameters:
+      - description: Body payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/request.PrincipleEmergencyContact'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
         "400":
           description: Bad Request
           schema:
