# models/entity/entity.go
@@ -2622,3 +2622,30 @@ type TrxPrincipleStatus struct {
 func (c *TrxPrincipleStatus) TableName() string {
 	return "trx_principle_status"
 }
+
+type TrxPrincipleEmergencyContact struct {
+	ProspectID        string    `gorm:"column:ProspectID;type:varchar(20);"`
+	Name              string    `gorm:"column:Name;type:varchar(200);"`
+	Relationship      string    `gorm:"column:Relationship;type:varchar(10);"`
+	MobilePhone       string    `gorm:"column:MobilePhone;type:varchar(20);"`
+	CompanyStreetName string    `gorm:"column:CompanyStreetName;type:varchar(255);"`
+	HomeNumber        string    `gorm:"column:HomeNumber;type:varchar(20);"`
+	LocationDetails   string    `gorm:"column:LocationDetails;type:varchar(255);"`
+	Rt                string    `gorm:"column:RT;type:varchar(3);"`
+	Rw                string    `gorm:"column:RW;type:varchar(3);"`
+	Kelurahan         string    `gorm:"column:Kelurahan;type:varchar(30);"`
+	Kecamatan         string    `gorm:"column:Kecamatan;type:varchar(30);"`
+	City              string    `gorm:"column:City;type:varchar(30);"`
+	Province          string    `gorm:"column:Province;type:varchar(30);"`
+	ZipCode           string    `gorm:"column:ZipCode;type:varchar(5);"`
+	AreaPhone         string    `gorm:"column:AreaPhone;type:varchar(5);"`
+	Phone             string    `gorm:"column:Phone;type:varchar(20);"`
+	CustomerID        int       `gorm:"column:CustomerID;"`
+	KPMID             int       `gorm:"column:KPMID;"`
+	CreatedAt         time.Time `gorm:"column:created_at"`
+	UpdatedAt         time.Time `gorm:"column:updated_at;autoUpdateTime"`
+}
+
+func (c *TrxPrincipleEmergencyContact) TableName() string {
+	return "trx_principle_emergency_contact"
+}
